# rubiks-cube

./: Makefile  pyproject.toml
src/: __main__.py
src/logic/: cube.py  rubiks_cube.py
src/logic/enums/: __init__.py
src/ui/: __init__.py  display.py
tests/logic/: test_cube.py  test_rubiks_cube.py
